corrected border, and aligned portfolio images at 640px resolution.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,8 +47,10 @@ a {
 }
 
 .container {
-    float: left;
+    display:inline-block;
+    
 }
+
 
 footer {
     margin-top:0px;
@@ -94,7 +96,7 @@ h4 {
 
 #message {
     width: 98%;    
-    height: 25%;
+    height: 120px;
     margin: 0px 0px 20px 0px;
     border: solid 1px #cccccc;
     outline: none;
@@ -152,7 +154,7 @@ p {
     height: auto;
     margin-left: 32px;
     margin-right: 32px;
-    border-top: solid 8px lightgray;
+    border-top: solid 4px lightgray;
     padding-top: 16px;
     overflow: hidden;
     display: inline-block;
@@ -193,8 +195,6 @@ p {
         margin-right: 16px;
     }
 
-
-
     .navBar {
         margin-left: 16px;
         width: 98%;
@@ -220,6 +220,10 @@ p {
         width: auto;
         margin-left: 0px;
     }
+
+    .hidden {
+        display: none;
+    }
 }
 
 @media only screen and (max-width: 768px) {
@@ -230,6 +234,7 @@ p {
         margin-right: auto;
         margin-left: auto;
         background-color: white;
+        margin-top: 2px;
     }
 
 
@@ -293,11 +298,14 @@ p {
    }
 
    #portfolioPictures {
-       margin-left: 20%;
-       margin-right: 20%;
+       width: 100%;
    }
 
-   .hidden {
-       display: none;
+   .container{
+       width: 100%;
+       display: inline-block;
+       margin-left: 160px;
    }
+
+ 
 }
